Excluding docker plugin

--- a/pom.xml
+++ b/pom.xml
@@ -41,38 +41,38 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <plugin>
-<!--                <groupId>com.spotify</groupId>-->
-<!--                <artifactId>dockerfile-maven-plugin</artifactId>-->
-<!--                <version>1.4.10</version>-->
-                <groupId>io.fabric8</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>0.44.0</version>
-                <executions>
-                    <execution>
-                        <id>buildpush-image</id>
-                        <phase>install</phase>
-                        <goals>
-                            <goal>build</goal>
-                            <goal>push</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <images>
-                        <image>
-                            <name>yameenbutt/${project.artifactId}:${project.version}</name>
-                            <build>
-                                <dockerFile>${project.basedir}/Dockerfile</dockerFile>
-                                <args>
-                                    <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
-                                </args>
-                            </build>
+            <!--                <groupId>com.spotify</groupId>-->
+            <!--                <artifactId>dockerfile-maven-plugin</artifactId>-->
+            <!--                <version>1.4.10</version>-->
+<!--            <plugin>-->
+<!--                <groupId>io.fabric8</groupId>-->
+<!--                <artifactId>docker-maven-plugin</artifactId>-->
+<!--                <version>0.44.0</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>buildpush-image</id>-->
+<!--                        <phase>install</phase>-->
+<!--                        <goals>-->
+<!--                            <goal>build</goal>-->
+<!--                            <goal>push</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    <images>-->
+<!--                        <image>-->
+<!--                            <name>yameenbutt/${project.artifactId}:${project.version}</name>-->
+<!--                            <build>-->
+<!--                                <dockerFile>${project.basedir}/Dockerfile</dockerFile>-->
+<!--                                <args>-->
+<!--                                    <JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>-->
+<!--                                </args>-->
+<!--                            </build>-->
 
-                        </image>
-                    </images>
-                </configuration>
-            </plugin>
+<!--                        </image>-->
+<!--                    </images>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
 <!--                <configuration>-->
 <!--                    <repository>yameenbutt/${project.artifactId}</repository>-->
 <!--                    <tag>${project.version}</tag>-->
